port authorizationserver to kotlin.
